--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <header>
     <h1>👋 Hi, I'm Christian Johnson</h1>
     <p>Documenting my journey into IT, homelabs, and automation.</p>
-    <a href="/blog" class="button">📖 Visit My Blog</a>
+    <a href="/blog/blog" class="button">📖 Visit My Blog</a>
   </header>
 
   <main>
